// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Alert Dismissible should render a dismissible icon button with the warning variant 1`] = `
.emotion-0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background: rgba(0,0,0,0);
  border: 0;
  border-color: #FFFFFF;
  border-radius: 100%;
  color: #FFFFFF;
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  font-family: "Open Sans",Helvetica,sans-serif;
  font-size: 16px;
  font-weight: 600;
  height: 40px;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  line-height: 1;
  margin: 4px;
  min-width: 5.625em;
  overflow: hidden;
  padding: 12px 16px;
  position: relative;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  touch-action: manipulation;
  -webkit-transition: background 0.35s,color 0.35s;
  transition: background 0.35s,color 0.35s;
  vertical-align: middle;
  white-space: nowrap;
  width: 40px;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  line-height: 1;
  min-width: 0;
  padding: 0;
  border-radius: 0 3px 3px 0;
  color: inherit;
  height: calc(100% - 6px);
  margin: 3px;
  padding: 0 15px;
  width: auto;
}

.emotion-0:not(:disabled):focus {
  outline: 2px dotted rgba(255,255,255,0.7);
  outline-offset: 3px;
}

.emotion-0:not(:disabled):hover,
.emotion-0:not(:disabled):focus {
  background: rgba(0,0,0,0.3);
  color: #FFFFFF;
}

.emotion-0:not(:disabled):after {
  background: #FFFFFF;
  border-radius: 50%;
  content: '';
  height: 32px;
  left: 50%;
  opacity: 0;
  padding: 50%;
  position: absolute;
  top: 50%;
  -webkit-transform: translate(-50%,-50%) scale(1);
  -ms-transform: translate(-50%,-50%) scale(1);
  transform: translate(-50%,-50%) scale(1);
  -webkit-transition: opacity 1s,-webkit-transform 0.5s;
  -webkit-transition: opacity 1s,transform 0.5s;
  transition: opacity 1s,transform 0.5s;
  width: 32px;
}

.emotion-0:not(:disabled):active {
  background: rgba(0,0,0,0.5);
  color: #FFFFFF;
}

.emotion-0:not(:disabled):active:after {
  opacity: 0.4;
  -webkit-transform: translate(-50%,-50%) scale(0);
  -ms-transform: translate(-50%,-50%) scale(0);
  transform: translate(-50%,-50%) scale(0);
  -webkit-transition: -webkit-transform 0s;
  -webkit-transition: transform 0s;
  transition: transform 0s;
}

.emotion-0 svg {
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.emotion-0.emotion-0:focus:not(:disabled) {
  outline: 2px dotted #027EE1;
  outline-offset: 0 !important;
}

.emotion-0:hover:not(:disabled):before,
.emotion-0:focus:not(:disabled):before {
  background: #027EE1;
  opacity: 0.15;
}

.emotion-0:hover:after,
.emotion-0:focus:after {
  display: none;
}

.emotion-0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background: rgba(0,0,0,0);
  border: 0;
  border-color: #FFFFFF;
  border-radius: 100%;
  color: #FFFFFF;
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  font-family: "Open Sans",Helvetica,sans-serif;
  font-size: 16px;
  font-weight: 600;
  height: 40px;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  line-height: 1;
  margin: 4px;
  min-width: 5.625em;
  overflow: hidden;
  padding: 12px 16px;
  position: relative;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  touch-action: manipulation;
  -webkit-transition: background 0.35s,color 0.35s;
  transition: background 0.35s,color 0.35s;
  vertical-align: middle;
  white-space: nowrap;
  width: 40px;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  line-height: 1;
  min-width: 0;
  padding: 0;
  border-radius: 0 3px 3px 0;
  color: inherit;
  height: calc(100% - 6px);
  margin: 3px;
  padding: 0 15px;
  width: auto;
}

.emotion-0:not(:disabled):focus {
  outline: 2px dotted rgba(255,255,255,0.7);
  outline-offset: 3px;
}

.emotion-0:not(:disabled):hover,
.emotion-0:not(:disabled):focus {
  background: rgba(0,0,0,0.3);
  color: #FFFFFF;
}

.emotion-0:not(:disabled):after {
  background: #FFFFFF;
  border-radius: 50%;
  content: '';
  height: 32px;
  left: 50%;
  opacity: 0;
  padding: 50%;
  position: absolute;
  top: 50%;
  -webkit-transform: translate(-50%,-50%) scale(1);
  -ms-transform: translate(-50%,-50%) scale(1);
  transform: translate(-50%,-50%) scale(1);
  -webkit-transition: opacity 1s,-webkit-transform 0.5s;
  -webkit-transition: opacity 1s,transform 0.5s;
  transition: opacity 1s,transform 0.5s;
  width: 32px;
}

.emotion-0:not(:disabled):active {
  background: rgba(0,0,0,0.5);
  color: #FFFFFF;
}

.emotion-0:not(:disabled):active:after {
  opacity: 0.4;
  -webkit-transform: translate(-50%,-50%) scale(0);
  -ms-transform: translate(-50%,-50%) scale(0);
  transform: translate(-50%,-50%) scale(0);
  -webkit-transition: -webkit-transform 0s;
  -webkit-transition: transform 0s;
  transition: transform 0s;
}

.emotion-0 svg {
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.emotion-0.emotion-0:focus:not(:disabled) {
  outline: 2px dotted #027EE1;
  outline-offset: 0 !important;
}

.emotion-0:hover:not(:disabled):before,
.emotion-0:focus:not(:disabled):before {
  background: #027EE1;
  opacity: 0.15;
}

.emotion-0:hover:after,
.emotion-0:focus:after {
  display: none;
}

<button
  aria-label="Close this message"
  class="emotion-0"
  icon="[object Object]"
  id="ignoreButton"
  theme="[object Object]"
>
  <svg
    aria-labelledby="ignoreButton"
    class="icon"
    fill="currentColor"
    height="13"
    id="ignoreSvg"
    viewBox="0 0 28 28"
    width="13"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M27.75,22.5h0L19.25,14l8.49-8.49h0a.75.75,0,0,0,.2-.31.87.87,0,0,0-.2-.93l-4-4a.86.86,0,0,0-.92-.2.91.91,0,0,0-.32.2h0L14,8.75,5.51.26h0a.83.83,0,0,0-.32-.2.86.86,0,0,0-.92.2l-4,4a.88.88,0,0,0,0,1.24h0L8.75,14,.26,22.5h0a.79.79,0,0,0-.2.31.86.86,0,0,0,.2.92l4,4a.88.88,0,0,0,.92.2,1,1,0,0,0,.32-.2h0L14,19.25l8.49,8.49h0a.78.78,0,0,0,.32.2.86.86,0,0,0,.92-.2l4-4a.86.86,0,0,0,.2-.92A.77.77,0,0,0,27.75,22.5Z"
      id="ignoreTitle"
      transform="translate(0 0)"
    />
  </svg>
</button>
`;

exports[`Alert Variants should render an alert with danger variant 1`] = `
.emotion-3 {
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  -webkit-animation: fadein 500ms;
  animation: fadein 500ms;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  line-height: 20px;
  margin-bottom: 20px;
  max-width: 100%;
  padding: 0;
  position: relative;
}

@media (max-width:600px) {
  .emotion-3 {
    font-size: 14px;
  }
}

.emotion-3:focus {
  outline: 2px dotted #027EE1;
}

.emotion-3 a {
  color: inherit;
  font-weight: 600;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-3 a:focus {
  outline: 2px dotted rgba(255,255,255,0.7);
}

.emotion-0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  padding: 0 10px 0 15px;
}

@media (max-width:600px) {
  .emotion-0 {
    display: none;
  }
}

.emotion-1 {
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  padding: 13px 15px 13px 0;
}

@media (max-width:600px) {
  .emotion-1 {
    padding-left: 15px;
  }
}

.emotion-2 {
  background-color: #C61D23;
  border-radius: 3px;
  border-radius: 5px;
  color: #FFFFFF;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: relative;
  z-index: 2;
}

.emotion-3 {
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  -webkit-animation: fadein 500ms;
  animation: fadein 500ms;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  line-height: 20px;
  margin-bottom: 20px;
  max-width: 100%;
  padding: 0;
  position: relative;
}

@media (max-width:600px) {
  .emotion-3 {
    font-size: 14px;
  }
}

.emotion-3:focus {
  outline: 2px dotted #027EE1;
}

.emotion-3 a {
  color: inherit;
  font-weight: 600;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-3 a:focus {
  outline: 2px dotted rgba(255,255,255,0.7);
}

.emotion-0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  padding: 0 10px 0 15px;
}

@media (max-width:600px) {
  .emotion-0 {
    display: none;
  }
}

.emotion-1 {
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  padding: 13px 15px 13px 0;
}

@media (max-width:600px) {
  .emotion-1 {
    padding-left: 15px;
  }
}

.emotion-2 {
  background-color: #C61D23;
  border-radius: 3px;
  border-radius: 5px;
  color: #FFFFFF;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: relative;
  z-index: 2;
}

<div>
  <div
    class="emotion-3"
    id="auto-generated-id"
    tabindex="-1"
  >
    <div
      class="emotion-2"
    >
      <span
        class="emotion-0"
      >
        <svg
          class="icon"
          fill="currentColor"
          height="20"
          viewBox="0 0 28 28"
          width="20"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M23.9,4.1A14,14,0,0,0,4.1,23.9,14,14,0,0,0,23.9,4.1Zm.6,9.9a10.48,10.48,0,0,1-1.94,6.08L7.92,5.44A10.5,10.5,0,0,1,24.5,14Zm-21,0A10.48,10.48,0,0,1,5.44,7.92L20.08,22.56A10.5,10.5,0,0,1,3.5,14Z"
            transform="translate(0)"
          />
        </svg>
      </span>
      <div
        class="emotion-1"
      >
        Test Alert Text
      </div>
    </div>
  </div>
</div>
`;

exports[`Alert Variants should render an alert with info variant 1`] = `
.emotion-3 {
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  -webkit-animation: fadein 500ms;
  animation: fadein 500ms;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  line-height: 20px;
  margin-bottom: 20px;
  max-width: 100%;
  padding: 0;
  position: relative;
}

@media (max-width:600px) {
  .emotion-3 {
    font-size: 14px;
  }
}

.emotion-3:focus {
  outline: 2px dotted #027EE1;
}

.emotion-3 a {
  color: inherit;
  font-weight: 600;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-3 a:focus {
  outline: 2px dotted rgba(255,255,255,0.7);
}

.emotion-2 {
  background-color: #3F3F3F;
  border-radius: 3px;
  border-radius: 5px;
  color: #FFFFFF;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: relative;
  z-index: 2;
}

.emotion-0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  padding: 0 10px 0 15px;
}

@media (max-width:600px) {
  .emotion-0 {
    display: none;
  }
}

.emotion-1 {
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  padding: 13px 15px 13px 0;
}

@media (max-width:600px) {
  .emotion-1 {
    padding-left: 15px;
  }
}

.emotion-3 {
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  -webkit-animation: fadein 500ms;
  animation: fadein 500ms;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  line-height: 20px;
  margin-bottom: 20px;
  max-width: 100%;
  padding: 0;
  position: relative;
}

@media (max-width:600px) {
  .emotion-3 {
    font-size: 14px;
  }
}

.emotion-3:focus {
  outline: 2px dotted #027EE1;
}

.emotion-3 a {
  color: inherit;
  font-weight: 600;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-3 a:focus {
  outline: 2px dotted rgba(255,255,255,0.7);
}

.emotion-2 {
  background-color: #3F3F3F;
  border-radius: 3px;
  border-radius: 5px;
  color: #FFFFFF;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: relative;
  z-index: 2;
}

.emotion-0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  padding: 0 10px 0 15px;
}

@media (max-width:600px) {
  .emotion-0 {
    display: none;
  }
}

.emotion-1 {
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  padding: 13px 15px 13px 0;
}

@media (max-width:600px) {
  .emotion-1 {
    padding-left: 15px;
  }
}

<div>
  <div
    class="emotion-3"
    id="auto-generated-id"
    tabindex="-1"
  >
    <div
      class="emotion-2"
    >
      <span
        class="emotion-0"
      >
        <svg
          class="icon"
          fill="currentColor"
          height="20"
          viewBox="0 0 27.3 27.3"
          width="20"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M12.65,9.9V7.14h2.7V9.9ZM14,25A11,11,0,1,0,3,14,11,11,0,0,0,14,25ZM14,.35A13.65,13.65,0,1,1,.35,14,13.62,13.62,0,0,1,14,.35ZM12.65,20.86V12.65h2.7v8.21Z"
            transform="translate(-0.35 -0.35)"
          />
        </svg>
      </span>
      <div
        class="emotion-1"
      >
        Test Alert Text
      </div>
    </div>
  </div>
</div>
`;

exports[`Alert Variants should render an alert with warning variant 1`] = `
.emotion-3 {
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  -webkit-animation: fadein 500ms;
  animation: fadein 500ms;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  line-height: 20px;
  margin-bottom: 20px;
  max-width: 100%;
  padding: 0;
  position: relative;
}

@media (max-width:600px) {
  .emotion-3 {
    font-size: 14px;
  }
}

.emotion-3:focus {
  outline: 2px dotted #027EE1;
}

.emotion-3 a {
  color: inherit;
  font-weight: 600;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-3 a:focus {
  outline: 2px dotted rgba(255,255,255,0.7);
}

.emotion-0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  padding: 0 10px 0 15px;
}

@media (max-width:600px) {
  .emotion-0 {
    display: none;
  }
}

.emotion-1 {
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  padding: 13px 15px 13px 0;
}

@media (max-width:600px) {
  .emotion-1 {
    padding-left: 15px;
  }
}

.emotion-2 {
  background-color: #FFC72C;
  border-radius: 3px;
  border-radius: 5px;
  color: #3F3F3F;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: relative;
  z-index: 2;
}

.emotion-3 {
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  -webkit-animation: fadein 500ms;
  animation: fadein 500ms;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  line-height: 20px;
  margin-bottom: 20px;
  max-width: 100%;
  padding: 0;
  position: relative;
}

@media (max-width:600px) {
  .emotion-3 {
    font-size: 14px;
  }
}

.emotion-3:focus {
  outline: 2px dotted #027EE1;
}

.emotion-3 a {
  color: inherit;
  font-weight: 600;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-3 a:focus {
  outline: 2px dotted rgba(255,255,255,0.7);
}

.emotion-0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  padding: 0 10px 0 15px;
}

@media (max-width:600px) {
  .emotion-0 {
    display: none;
  }
}

.emotion-1 {
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  padding: 13px 15px 13px 0;
}

@media (max-width:600px) {
  .emotion-1 {
    padding-left: 15px;
  }
}

.emotion-2 {
  background-color: #FFC72C;
  border-radius: 3px;
  border-radius: 5px;
  color: #3F3F3F;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: relative;
  z-index: 2;
}

<div>
  <div
    class="emotion-3"
    id="auto-generated-id"
    tabindex="-1"
  >
    <div
      class="emotion-2"
    >
      <span
        class="emotion-0"
      >
        <svg
          class="icon"
          fill="currentColor"
          height="20"
          viewBox="0 0 40 40"
          width="20"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M20,4.5625 C15.877,4.5625 11.9998125,6.168 9.0845,9.0845 C6.1691875,12.001 4.5625,15.877 4.5625,20 C4.5625,24.123 6.168,28.0001875 9.0845,30.9155 C12.001,33.8308125 15.877,35.4375 20,35.4375 C24.123,35.4375 28.0001875,33.832 30.9155,30.9155 C33.8308125,27.999 35.4375,24.123 35.4375,20 C35.4375,15.877 33.832,11.9998125 30.9155,9.0845 C27.999,6.1691875 24.123,4.5625 20,4.5625 Z M20,1 L20,1 C30.4939375,1 39,9.5060625 39,20 C39,30.4939375 30.4939375,39 20,39 C9.5060625,39 1,30.4939375 1,20 C1,9.5060625 9.5060625,1 20,1 Z M17.625,27.125 L22.375,27.125 L22.375,31.875 L17.625,31.875 L17.625,27.125 Z M17.625,8.125 L22.375,8.125 L22.375,22.375 L17.625,22.375 L17.625,8.125 Z"
          />
        </svg>
      </span>
      <div
        class="emotion-1"
      >
        Test Alert Text
      </div>
    </div>
  </div>
</div>
`;

exports[`Alert should render an alert with default variant 1`] = `
.emotion-3 {
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  -webkit-animation: fadein 500ms;
  animation: fadein 500ms;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  line-height: 20px;
  margin-bottom: 20px;
  max-width: 100%;
  padding: 0;
  position: relative;
}

@media (max-width:600px) {
  .emotion-3 {
    font-size: 14px;
  }
}

.emotion-3:focus {
  outline: 2px dotted #027EE1;
}

.emotion-3 a {
  color: inherit;
  font-weight: 600;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-3 a:focus {
  outline: 2px dotted rgba(255,255,255,0.7);
}

.emotion-2 {
  background-color: #3F3F3F;
  border-radius: 3px;
  border-radius: 5px;
  color: #FFFFFF;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: relative;
  z-index: 2;
}

.emotion-0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  padding: 0 10px 0 15px;
}

@media (max-width:600px) {
  .emotion-0 {
    display: none;
  }
}

.emotion-1 {
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  padding: 13px 15px 13px 0;
}

@media (max-width:600px) {
  .emotion-1 {
    padding-left: 15px;
  }
}

.emotion-3 {
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  -webkit-animation: fadein 500ms;
  animation: fadein 500ms;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  line-height: 20px;
  margin-bottom: 20px;
  max-width: 100%;
  padding: 0;
  position: relative;
}

@media (max-width:600px) {
  .emotion-3 {
    font-size: 14px;
  }
}

.emotion-3:focus {
  outline: 2px dotted #027EE1;
}

.emotion-3 a {
  color: inherit;
  font-weight: 600;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-3 a:focus {
  outline: 2px dotted rgba(255,255,255,0.7);
}

.emotion-2 {
  background-color: #3F3F3F;
  border-radius: 3px;
  border-radius: 5px;
  color: #FFFFFF;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: relative;
  z-index: 2;
}

.emotion-0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  padding: 0 10px 0 15px;
}

@media (max-width:600px) {
  .emotion-0 {
    display: none;
  }
}

.emotion-1 {
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  padding: 13px 15px 13px 0;
}

@media (max-width:600px) {
  .emotion-1 {
    padding-left: 15px;
  }
}

<div>
  <div
    class="emotion-3"
    id="defaultVariant"
    tabindex="-1"
  >
    <div
      class="emotion-2"
    >
      <span
        class="emotion-0"
      >
        <svg
          class="icon"
          fill="currentColor"
          height="20"
          viewBox="0 0 27.3 27.3"
          width="20"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M12.65,9.9V7.14h2.7V9.9ZM14,25A11,11,0,1,0,3,14,11,11,0,0,0,14,25ZM14,.35A13.65,13.65,0,1,1,.35,14,13.62,13.62,0,0,1,14,.35ZM12.65,20.86V12.65h2.7v8.21Z"
            transform="translate(-0.35 -0.35)"
          />
        </svg>
      </span>
      <div
        class="emotion-1"
      >
        Test Alert Text
      </div>
    </div>
  </div>
</div>
`;
